--- a/.gitignore
+++ b/.gitignore
@@ -15,11 +15,7 @@ node_modules
 bower_components
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 
 # Vim
 # Swap
